fixed issues with userId and username